properties should mirror attributes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   Hello
-  <info-card text="Example!"></info-card>
+  <info-card description="This is some description"></info-card>
 </body>
 <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js" defer></script>
 <script type="module">
