added missing close tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       description="This is the card description. It can be as long or as short as neeeded. The container will adjust automatically"
       button1="Action 1"
       button2="Action 2"
-    />
+    ></info-card>
   </div>
   </div>
 </body>
